added nav and footer to html

--- a/super_site.html
+++ b/super_site.html
@@ -2,6 +2,15 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <nav>
+      <nav>
+        <a href="/html/">HTML</a> |
+        <a href="/css/">CSS</a> |
+        <a href="/js/">JavaScript</a> |
+        <a href="/python/">Python</a>
+      </nav>
+    </nav>
     <h1>Super site d'e-commerce</h1>
+    <footer>Salut</footer>
   </body>
 </html>
