--- a/super_site.html
+++ b/super_site.html
@@ -11,6 +11,7 @@
       </nav>
     </nav>
     <h1>Super site d'e-commerce</h1>
+    <div>super div</div>
     <footer>Salut</footer>
   </body>
 </html>
